# quchat

./: LICENSE.md  README.md  TODO.md
chat-room-client/: .gitignore  Cargo.toml  TODO.md
chat-room-client/src/: asciiart.rs  chat_room_client.rs  data_files.rs  events.rs  main.rs  render.rs  state.rs  state_machine.rs  token.rs
chat-room-server/: .env  .gitignore  Cargo.toml  Rocket.toml  TODO.md  add-rooms.sh  dbsetup-other.sh  dbsetup.sh  mock-data.sh  sqlx-prepare.sh
chat-room-server/db/: 20250415185041_init.down.sql  20250415185041_init.up.sql
chat-room-server/db-other/: 20250706071933_init.down.sql  20250706071933_init.up.sql
chat-room-server/src/: authentication.rs  base.rs  catchers.rs  jwt.rs  main.rs  message.rs  rooms.rs  serde_datetime.rs  user.rs
qu-chat-models/: Cargo.toml
qu-chat-models/src/: lib.rs
