[package]
name = "chat-room-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.15", features = ["json", "stream"]}
clap = {version = "4.5.37", features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
chrono = "0.4.40"

qu-chat-models = {path = "../qu-chat-models"}

ratatui = "0.29.0"
futures = "0.3"