[package]
name = "chat-room"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.219"
flume = "0.10"
uuid = {version ="1.16.0", features = ["v4"]}
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4"
chrono = "0.4.40"

qu-chat-models = {path = "../qu-chat-models"}

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate", "sqlite"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
